--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 
 <div id="game"></div>
 
-<script src="memory-game copy.js"></script>
+<script src="memory-game.js"></script>
 
 </body>
 </html>
