--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
   <title>Memory Game!</title>
   <link rel="stylesheet" href="memory-game.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <h1>Memory Game!</h1>
-
+<h3 id="score"><image></image></h3>
 <div id="game"></div>
 
 <script src="memory-game.js"></script>
