reset button and more cats

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 
 <h1>Memory Game!</h1>
-<h3 id="score"><image></image></h3>
-<div id="game"></div>
+<h3 id="score"></h3>
 
+<div id="game"></div>
+<button id="button">play again?</button>
 <script src="memory-game.js"></script>
 
 </body>
