--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <h1>Memory Game!</h1> 
-<h3 id="score"></h3>
+<h3 id="score"></h3> <h4 id="flip-count"></h4>
 <div id="game"></div>
 <button id="button">play again?</button>
 
