--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <h1>Memory Game!</h1> 
-<h3 id="score"></h3> <h4 id="flip-count"></h4>
+<h3 id="score"></h3> 
 <div id="game"></div>
-<button id="button">play again?</button>
+<button id="button"></button>
 
 <script src="memory-game.js"></script>
 
