--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
 <h1>Memory Game!</h1> 
-<h3 id="score"></h3> 
+
+<h3 id="pairsLeft"></h3> 
 <div id="game"></div>
 <button id="button"></button>
 
